@@ -25,6 +25,7 @@ tion.
 multiplayer-only. (Maybe a little faster than 1.12.2!)
 [+] Fixed the email button opening my email in the same page, causing it to
 not load.
+[+] Made the "Contact" button at the top scroll to the contact information.
 
 11/04/2025:
 [+] Fixed the 'Open Suggestion Form' opening the bug report form and the
